--- a/assets/scss/propane.scss
+++ b/assets/scss/propane.scss
@@ -1,11 +1,11 @@
 @import
 	'bower_components/foundation-sites/scss/util/util',
-	'config/variables',
 	'config/settings',
+	'config/variables',
 	'bower_components/foundation-sites/scss/foundation',
 	'config/foundation',
 	'config/mixins',
-	'config/typography',
+	'config/icon-font',
 
 	'plugins/plugins',
 
