--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /**
  * Theme Name:         Propane
- * Theme URI:          http://4027frr.com
+ * Theme URI:          http://4027frr.co
  * Github Theme URI:   https://github.com/linchpinagency/hatch
- * Description:        Flat River Road
- * Version:            0.1.0
+ * Description:        4027 FRR
+ * Version:            1.0.0
  * Author:             Brian Fischer
- * Author URI:         http://brianfischer.me
+ * Author URI:         https://brianfischer.me
  *
  * Text Domain:        propane
  *
