--- a/assets/scss/site/global/_structure.scss
+++ b/assets/scss/site/global/_structure.scss
@@ -1,93 +1,62 @@
 /**
- * Table of Contents for FoundationPress:
- *
- * 1.0 - Custom settings
- * 2.0 - Typography
- * 3.0 - Header, sidebar and footer
- * 4.0 - Content
- *	4.1 - Pages
- *	4.2 - Posts
- *	4.3	- Widgets
- *	4.4 - Comments
-  *	4.5 - Lists
-  * 4.6 - Forms
- * 5.0 - Plugins
-
- * ----------------------------------------------------------------------------
+ * 01. Colors
+ * 02. Spacing
+ * 03. Container
  */
 
 
-
-/**
- * 1.0 Custom settings
- * ----------------------------------------------------------------------------
- */
-
-
-// Reset margin and padding on figure element
-figure {
-	margin: 0;
-	padding: 0;
-}
-
-// Add some basic styling for figcaption element
-figcaption {
-	margin-bottom: rem-calc(20);
-	margin-top: rem-calc(10);
-	color: #6f6f6f;
-}
-
-// Add the alignment classes used by the WordPress media library
-.alignleft {
-	float: left;
-}
-
-.alignright {
-	float: right;
-}
-
-.aligncenter {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-blockquote,
-img {
-	&.alignleft {
-		margin: rem-calc(7) rem-calc(24) rem-calc(7) 0;
+// 01. Colors
+@each $label, $hex in $color-map {
+	.background-#{$label} {
+		background-color: $hex;
 	}
-}
 
-.wp-caption.alignleft {
-	margin: rem-calc(7) rem-calc(14) rem-calc(7) 0;
-}
+	.color-#{$label} {
+		color: $hex;
+	}
 
-blockquote,
-img {
-	&.alignright {
-		margin: rem-calc(7) 0 rem-calc(7) rem-calc(24);
+	.links-#{$label} a {
+		color: $hex;
 	}
 }
 
 
-// Add some whitespace between top bar and content
-.top-bar-container, .tab-bar {
-	margin-bottom: rem-calc(32);
+// 02. Spacing
+@include spacing-layout( 'padding' );
+@include spacing-layout( 'margin' );
+
+@include breakpoint(medium up) {
+	@include spacing-layout( 'padding', 'medium' );
+	@include spacing-layout( 'margin', 'medium' );
 }
 
-// Fix the issue where the WP adminbar overlaps the mobile menu
-#wpadminbar {
-	position: fixed !important;
+@include breakpoint(large up) {
+	@include spacing-layout( 'padding', 'large' );
+	@include spacing-layout( 'margin', 'large' );
 }
 
-.clickable:hover {
-	cursor: pointer;
-}
+// 03. Container
+.container {
+	padding: {
+		bottom: map-get($spacing-sizes, small);
+		top: map-get($spacing-sizes, small);
+	};
 
-// Add some whitespace above the footer for medium-up screens
-@media #{$medium-up} {
-	footer.row {
-		margin-top: rem-calc(60);
+	@include breakpoint(medium up) {
+		&:not(.small) {
+			padding: {
+				bottom: map-get($spacing-sizes, medium);
+				top: map-get($spacing-sizes, medium);
+			};
+		}
+	}
+
+	@include breakpoint(large up) {
+		&.large {
+			padding: {
+				bottom: map-get($spacing-sizes, large);
+				top: map-get($spacing-sizes, large);
+			};
+		}
 	}
 }
